--- a/ngpwaworkshop.backend/ngpwaworkshop.backend.csproj
+++ b/ngpwaworkshop.backend/ngpwaworkshop.backend.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>bed382c9-2b43-4187-98ca-de53c72c9112</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="WebPush" Version="1.0.11" />
   </ItemGroup>
-
 </Project>
